# 2

./: .gitignore  .gitmodules  1.py  README.md  fix_tutorials.py  hugo.yaml  migration_summary.txt  preprocess.py  repo_structure.txt  serve.sh  vercel.json
.github/workflows/: build.yml
content/: 404.md  _index.html
content/about/: about.md
content/community/: community-channels.md  community-contributors.md  community-projects.md  community-support-precice.md  community-training.md  community.md
content/imported/dumux-adapter/test/singleCheckpointTest/: Allrun.sh  CMakeLists.txt  main.cc  params_one.input  params_two.input  test.xml
content/posts/: 2015-04-12-test-post-last-year.md  2016-02-24-first-post.md  2016-02-26-sample-post-jekyll.md
content/privacy/: privacy.md
content/tutorials/: tutorials-visualization.md  tutorials.md
data/: developer.yaml
layouts/_default/: about.html  baseof.html  default.html  default_print.html  landing.html  landing_page.html  none.html  page.html  page_print.html  post.html  section.html
layouts/partials/: about.html  algolia.html  archive.html  breadcrumb.html  callout.html  commento.html  disclaimer.html  feedback.html  footer.html  google_analytics.html  head.html  head_print.html  image.html  important.html  inline_image.html  links.html  news_banner.html  note.html  sidebar.html  taglogic.html  tip.html  toc.html  topnav.html  warning.html
layouts/shortcodes/: dev_leads.html  devlist.html  funding.html
static/css/: about.css  boxshadowproperties.css  customstyles-precice.css  customstyles.css  footer.css  (+9 more)
(+496 files in other folders)
